@startuml

title __TRANSPORT's Class Diagram__\n

  package main {
    package main.vehicles {
      package main.vehicles.transport {
        class CarFerry {
            + CarFerry()
            + raiseRamp()
            + lowerRamp()
            + incrementSpeed()
            + decrementSpeed()
            + gas()
            + brake()
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.transport {
        class CarTransport {
            + CarTransport()
            + startEngine()
            + speedFactor()
            + move()
            + lowerRamp()
            + raiseRamp()
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.cars {
        enum Type {
          SEDAN
          TRUCK
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.transport {
        class Scania {
            + Scania()
            + speedFactor()
            + getFlatbed()
            + startEngine()
            + tipFlatbed()
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.cars {
        enum Type {
          SEDAN
          TRUCK
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.transport {
        class Transport {
            - maxCars : int
            - unloadFirstCar : boolean
            - point : Point
            - cars : List<Car>
            + Transport()
            + loadCar()
            + moveCars()
            + unloadCar()
            + getCars()
        }
      }
    }
  }
  

  CarFerry -up-|> Vehicle
  CarFerry o-- Ramp : ramp
  CarFerry o-- Transport : transport
  CarTransport -up-|> Car
  CarTransport o-- Ramp : ramp
  CarTransport o-- Transport : transport
  CarTransport +-down- Type
  Scania -up-|> Car
  Scania o-- Flatbed : flatbed
  Scania +-down- Type
  Transport o-- Ramp : ramp


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
